Added ASAN support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,9 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin")
 
-add_compile_options(-Wall -Wextra -Wpedantic -Werror -fno-omit-frame-pointer)
+include(cmake/sanitizers.cmake)
+
+add_compile_options(-Wall -Wextra -Wpedantic -Werror -g -fno-omit-frame-pointer)
 
 add_subdirectory(third_party)
 add_subdirectory(dllib)
